yaml/backend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
    application: backend-app
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        application: backend-app
    spec:
      containers:
      - name: backend
        image: quay.io/bfarr/jboss-demo-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
