yaml/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: registry.redhat.io/rhel8/postgresql-13:1-56.1654147925
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: database-volume
          mountPath: /var/lib/pgsql/data
      volumes:
        - name: database-volume
          emptyDir: {} # This defines the emptyDir volume
